--- a/dev/data/rules/rules_table_booking.yml
+++ b/dev/data/rules/rules_table_booking.yml
@@ -1,3 +1,19 @@
-#version: "3.1"
-#
-#rules:
+version: "3.1"
+
+rules:
+- rule: Activate Table Booking Form
+  steps:
+  - intent: book_table
+  - action: table_booking_form
+  - active_loop: table_booking_form
+
+- rule: Submit Table Booking Form
+  condition:
+  - active_loop: table_booking_form
+  steps:
+  - action: table_booking_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: utter_submit_table_booking
+  - action: utter_table_slots
