--- a/dev/domain.yml
+++ b/dev/domain.yml
@@ -12,7 +12,9 @@ intents:
 - inform
 # table booking
 - book_table
+- book event
 - inform_table_booking
+- inform_client_name
 # forms
 - pizza_order_form
 - table_booking_form
@@ -47,9 +49,9 @@ slots:
     mappings:
     - type: from_entity
       entity: num_people
-      conditions:
-      - active_loop: table_booking_form
-        requested_slot: num_people
+      # conditions:
+      # - active_loop: table_booking_form
+      #   requested_slot: num_people
 
   booking_time:
     type: text
@@ -57,9 +59,9 @@ slots:
     mappings:
     - type: from_entity
       entity: booking_time
-      conditions:
-      - active_loop: table_booking_form
-        requested_slot: booking_time
+      # conditions:
+      # - active_loop: table_booking_form
+      #   requested_slot: booking_time
   
   inside_outside:
     type: text
@@ -67,9 +69,9 @@ slots:
     mappings:
     - type: from_entity
       entity: inside_outside
-      conditions:
-      - active_loop: table_booking_form
-        requested_slot: inside_outside
+      # conditions:
+      # - active_loop: table_booking_form
+      #   requested_slot: inside_outside
   
   client_name:
     type: text
@@ -77,9 +79,10 @@ slots:
     mappings:
     - type: from_entity
       entity: client_name
-      conditions:
-      - active_loop: table_booking_form
-        requested_slot: client_name
+      # conditions:
+      # - active_loop: table_booking_form
+      #   requested_slot: client_name
+
 
 forms:
   pizza_order_form:
