--- a/dev/data/rules/rules_table_booking.yml
+++ b/dev/data/rules/rules_table_booking.yml
@@ -17,7 +17,6 @@ rules:
   - active_loop: null
   - slot_was_set:
     - requested_slot: null
-  - action: utter_submit_table_booking
   - action: utter_table_slots
 
 
@@ -39,3 +38,8 @@ rules:
   - action: utter_out_of_scope
   - action: table_booking_form
   - active_loop: table_booking_form
+
+- rule: Event booking
+  steps:
+  - intent: book_event
+  - action: utter_event_information
