--- a/dev/domain.yml
+++ b/dev/domain.yml
@@ -104,7 +104,6 @@ actions:
 - utter_pizza_slots
 - utter_table_slots
 - utter_submit
-- utter_submit_table_booking
 - utter_faq
 - utter_out_of_scope
 - utter_ask_continue
@@ -114,6 +113,7 @@ actions:
 - utter_ask_booking_time
 - utter_ask_inside_outside
 - utter_ask_client_name
+- utter_event_information
 # custom actions
 - validate_pizza_order_form
 - validate_table_booking_form
@@ -129,13 +129,21 @@ responses:
   - text: My tasks include taking orders for pizza and drinks for takeaway as well as making table bookings for our restaurant.
   utter_faq/request_restaurant_location:
   - text: DoughVinci is located in Via dei Solteri 35, in Trento.
+  utter_faq/dogs_allowed:
+  - text: Dogs are very welcome at our place! Don't hesitate to bring your buddy.
+  - text: Of course you can bring your dog! We are happy to welcome your buddy at our place.
+  utter_faq/how_many_people:
+  - text: We have tables for 2 to 6 people. If you're interested in booking for greater amounts of people, please call us under 0123456789. We're happy to help you!
+  utter_faq/opening_hours:
+  - text: Our opening hours are from 7pm to 10pm. The latest table can be reserved for 9pm.
+  - text: DoughVinci is opened from 7pm to 10pm every day. If you want to book a table, the latest option is 9pm.
+  utter_faq/outside_tables:
+  - text: Our tables outside are wonderful! They are roofed with a nice view. If it gets colder outside we provide heaters and blankets, if you want.
   utter_out_of_scope:
-  - text: Sorry, but I can't handle this request. I am a bot for ordering and table bookings in our restaurant DoughVinci.
+  - text: Sorry, but I can't handle this request. I am a bot for pizza ordering and table bookings in our restaurant DoughVinci.
   - text: Unfortunately I am not created to answer these kind of requests. But I would love to help you with ordering from our restaurant or to book a table there.
   utter_submit:
   - text: I will now order a pizza for you!
-  utter_submit_table_booking:
-  - text: TABLE FORM COMPLETE!
   utter_pizza_slots:
   - text: I will order a {pizza_size} {pizza_type} pizza.
   utter_table_slots:
@@ -154,7 +162,9 @@ responses:
   - text: Do you want to sit inside or outside?
   utter_ask_client_name:
   - text: Can you give me your name, please?
-
+  utter_event_information:
+  - text: I'm sorry, your request for an event can't be handled directly here by me. Please call us under 0123456789, we are happy to help you with your request!
+  - text: I'm sorry, I can't handle this request, but my colleagues can! Please call us under 0123456789 for your event!
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
